update mobile build config

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -21,10 +21,16 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.atharva_sarnaik.koescroll"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "ec42ee1d-54a4-4deb-b6ed-9da8f92b1b39"
+      }
     }
   }
 }
