--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -14,8 +14,11 @@
         "buildType": "apk"
       },
       "env": {
-        "EXPO_PUBLIC_SUPABASE_URL": "REPLACE_WITH_YOUR_URL_FROM_ENV_FILE",
-        "EXPO_PUBLIC_SUPABASE_ANON_KEY": "REPLACE_WITH_YOUR_ANON_KEY_FROM_ENV_FILE"
+        "EXPO_PUBLIC_SUPABASE_URL": "https://iktohtvvsptsiauedzfr.supabase.co",
+        "EXPO_PUBLIC_SUPABASE_ANON_KEY": "sb_publishable_lMC8yjvxwedurT49pv-k-Q_d0EfhliV",
+        "EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID": "659700657654-pf3ud568p4ao816r8ountbtmov674n1f.apps.googleusercontent.com",
+        "EXPO_PUBLIC_GEMINI_API_KEY": "REPLACE_WITH_YOUR_GEMINI_KEY",
+        "EXPO_PUBLIC_ELEVENLABS_API_KEY": "REPLACE_WITH_YOUR_ELEVENLABS_KEY"
       }
     },
     "production": {
